Mon Oct 09 09:07:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/generate_rel_manpages:
	  Fixed an error in this script and updated the location to which the
	  generated packages should be copied to

Mon Oct 09 09:03:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/Download.html:
	  Updated with the new download locations

	* docs/bczar/bczar.html:
	  Updated documentation generation instructions

Thu Oct 05 00:35:37 2006  William R. Otte  wotte@dre.vanderbilt.edu

        * ACE version 5.5.3 released.

Tue Oct  3 16:45:35 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * NEWS
          Updated the NEWS to add the changes for ACE_Hash_MultiMap_Manager
          class and executionmanager_stub and plan_generator base projects.

Tue Oct  3 15:02:14 UTC 2006  Steve Huston  <shuston@riverace.com>

        * NEWS: Described the ACE_Refcounted_Auto_Ptr effects of
          Thu Jul  6 20:45:15 UTC 2006  Steve Huston  <shuston@riverace.com>

Mon Oct  2 12:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Const/bool improvements

Mon Oct  2 11:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.{h,cpp}:
          Changed is_set_ conditional values member to bool

Sat Sep 30 14:00:33 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Cached_Allocator_Test.cpp:
        * tests/Codecs_Test.cpp:
        * tests/Enum_Interfaces_Test.cpp:
        * tests/Get_Opt_Test.cpp (run_test):
        * tests/Naming_Test.cpp:
        * tests/Reactor_Notification_Queue_Test.cpp:
        * tests/Reference_Counted_Event_Handler_Test.cpp:
        * tests/Timer_Queue_Reference_Counting_Test.cpp:
          Correct logging format for wide-char build.

Fri Sep 29 18:54:29 UTC 2006  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_signal.inl (sigaction): In the !ACE_HAS_SIGACTION_CONSTP2
	  case, use ACE_SIGACTION instead of "struct sigaction" to pick up