@@ -98,7 +98,7 @@ post something and don't get a reply, please do the following:<P>
   can see by checking out the <A
     HREF="http://groups.google.com/groups?q=comp.soft-sys.ace&ie=UTF-8&oe=UTF-8&hl=en">comp.soft-sys.ace</A> newsgroup to see if your posting is visible. <P>
 
-<LI> If it's not visible, please make sure you're 
+<LI> If it's not visible, please make sure you're
   <A HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">subscribed
 to the mailing
   list(s)</A> you sent the report to since we have a "members only" posting
@@ -106,7 +106,7 @@ to the mailing
 
 <LI> If it is visible and you haven't received a reply this probably means
   that either no one knows the answer or no one has time to answer it.
-  As always, if you need more predictable help please contact one of 
+  As always, if you need more predictable help please contact one of
   <A
 HREF="http://www.cs.wustl.edu/~schmidt/commercial-support.html">commercial
 support</a> companies for ACE+TAO.<P>
@@ -143,10 +143,11 @@ lists and newsgroup.  If you have a patch that fixes a problem you've
 found with our software here's the process for submitting it:
 
 <OL>
-<LI> Use the latest contents of our CVS repository, i.e., what's available from <P>
+<LI> Use the latest contents of subversion CVS repository, i.e.,
+	   what's available from <P>
 
-  <A HREF="http://cvs.doc.wustl.edu/">http://cvs.doc.wustl.edu/</A> <P>
-  
+  <A HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/">https://svn.dre.vanderbilt.edu/</A> <P>
+
 <LI> Create a ``unified diff'' and put this into Bugzilla at <P>
 
   <A HREF="http://deuce.doc.wustl.edu/bugzilla/index.cgi">http://deuce.doc.wustl.edu/bugzilla/index.cgi</A> <P>
@@ -157,7 +158,7 @@ list(s)</A> and/or <A HREF="news:comp.soft-sys.ace">newsgroup</A>
 newsgroup summarizing what the problem was and you've done to fix the
 problem, i.e., use the <A HREF="../ChangeLog"</A>ChangeLog</A>
 format. <P>
-  
+
 <LI> Ideally, you could also create (or augment) a test program that
   validates your patch and integrate it into the <A
 HREF="../tests">ACE_ROOT/tests</A> directory. <P> </OL>
