@@ -80,54 +80,66 @@ of the ACE, TAO, and CIAO beta kit is available for
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.gz">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.gz">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.gz">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.gz">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE+TAO+CIAO.tar.bz2</TD>
       <TD>ACE+TAO+CIAO (tar+bzip2 format)</TD>
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.bz2">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.bz2">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.bz2">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.bz2">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE+TAO+CIAO.zip</TD>
       <TD>ACE+TAO+CIAO (zip format)</TD>
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.zip">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.zip">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.zip">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.zip">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE+TAO.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.gz">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.gz">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.gz">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.gz">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE+TAO.tar.bz2</TD>
       <TD>ACE+TAO (tar+bzip2 format)</TD>
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.bz2">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.bz2">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.bz2">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.bz2">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE+TAO.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.zip">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.zip">FTP</A>]
       </TD>
+<!--
       <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.zip">HTTP</A>]
           [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.zip">FTP</A>]
       </TD>
+-->
   </TR>
   <TR><TD>ACE-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+gzip format)</TD>
